--- a/index.html
+++ b/index.html
@@ -7,33 +7,40 @@
   <title>シングルカラムレイアウト</title>
 </head>
 <body>
-  <header class="header">
-    <h1 class="site-title">Herb Kitchen</h1>
-    <nav class="nav">
-      <ul class="horizontal-list">
-        <li class="nav-item horizontal-item"><a href="#">News</a></li>
-        <li class="nav-item horizontal-item active"><a href="#">Food</a></li>
-        <li class="nav-item horizontal-item"><a href="#">Drink</a></li>
-        <li class="nav-item horizontal-item"><a href="#">Goods</a></li>
-        <li class="nav-item horizontal-item"><a href="#">Column</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main">
-    <h2 class="heading">オリジナルレシピ</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut autem praesentium esse repellat quas minus labore laboriosam commodi, ipsa a non adipisci dignissimos quasi excepturi nesciunt rem, numquam, sed animi.</p>
+  <div class="wrapper">
 
-    <article class="article clearfix">
-      <h3 class="title">タコのカルパッチョ</h3> 
-      <p class="desc"><img class="image" src="./images/salad.jpg" alt="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero rerum eum vitae facere, nobis hic. Rerum quae minima ipsam ipsa placeat animi minus totam nihil eveniet recusandae, omnis harum error.</p>
-    </article>
-    <article class="article clearfix">
-      <h3 class="title">しらすのペペロンチーノ</h3>
-      <p class="desc"><img class="image" src="./images/pasta.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore maiores blanditiis ut ratione veniam nulla harum magni sapiente praesentium, minima nemo ad aliquid. Ea facere quo hic laboriosam! Sequi.</p>
-    </article>
-  </main>
-  <footer class="footer">
-    <p class="copyright">©︎SampleSite</p>
-  </footer>
+    <header class="header">
+      <h1 class="site-title">Herb Kitchen</h1>
+      <nav class="nav">
+        <ul class="horizontal-list">
+          <li class="nav-item horizontal-item"><a href="#">News</a></li>
+          <li class="nav-item horizontal-item active"><a href="#">Food</a></li>
+          <li class="nav-item horizontal-item"><a href="#">Drink</a></li>
+          <li class="nav-item horizontal-item"><a href="#">Goods</a></li>
+          <li class="nav-item horizontal-item"><a href="#">Column</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="main">
+      <h2 class="heading">オリジナルレシピ</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut autem praesentium esse repellat quas minus labore laboriosam commodi, ipsa a non adipisci dignissimos quasi excepturi nesciunt rem, numquam, sed animi.</p>
+
+      <article class="article clearfix">
+        <h3 class="title">タコのカルパッチョ</h3> 
+        <p class="desc"><img class="image" src="./images/salad.jpg" alt="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero rerum eum vitae facere, nobis hic. Rerum quae minima ipsam ipsa placeat animi minus totam nihil eveniet recusandae, omnis harum error.</p>
+      </article>
+      <article class="article clearfix">
+        <h3 class="title">しらすのペペロンチーノ</h3>
+        <p class="desc"><img class="image" src="./images/pasta.jpg" alt="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam labore maiores blanditiis ut ratione veniam nulla harum magni sapiente praesentium, minima nemo ad aliquid. Ea facere quo hic laboriosam! Sequi.</p>
+      </article>
+    </main>
+
+    <footer class="footer">
+      <p class="copyright">©︎SampleSite</p>
+    </footer>
+
+  </div>
+
 </body>
 </html>
